# rust

./: .gitignore  Cargo.toml
aiedit/: Factorial.rs  LLM-LOCAL-SETUP.md  README.md  package.json  pyfactorial.py
aiedit/src-tauri/: Cargo.toml  New.txt  tauri.conf.json
aiedit/src-tauri/capabilities/: default.json
aiedit/src-tauri/src/: lib.rs  main.rs
aiedit/src/routes/: +page.svelte
buzzer_happy_birthday/: Cargo.toml  README.md
buzzer_happy_birthday/src/: main.rs
cli-ai-text-editor/: README.md  angular.json  cli-ai-text-editor  package.json  test.txt
cli-ai-text-editor/src-tauri/: Cargo.toml  tauri.conf.json
cli-ai-text-editor/src-tauri/src/: lib.rs  main.rs
cli-ai-text-editor/src/app/: app.component.css  app.component.html  app.component.ts
cli-ai-text-editor/src/app/services/: cli.service.ts
clipboard-rs/: README.md  clipboard-rs-architecture.md  learn-tauri.md  package.json
clipboard-rs/src/: App.css  App.tsx  main.tsx  theme.ts
clipboard-rs/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
clipboard-rs/src-tauri/capabilities/: default.json
clipboard-rs/src-tauri/src/: lib.rs  main.rs
coding-interview-patterns/: Cargo.toml
coding-interview-patterns/src/hash_maps_and_sets/: pair_sum_unsorted.rs  pair_sum_unsorted_two_pass.rs
coding-interview-patterns/src/two_pointers/: is_palindrome_valid.test.rs  largest_container.rs  largest_container.test.rs  pair_sum_sorted.test.rs  triplet_sum.test.rs
esp32/: Cargo.toml  README.md
esp32-async-counter/: Cargo.toml  README.md
esp32-async-counter/.cargo/: config.toml
esp32-async-counter/src/: display.rs  main.rs  web.rs
esp32-bluetooth/: .gitignore  BLE_SERVICE_EXAMPLE.md  Cargo.toml  README.md  sdkconfig.defaults
esp32-bluetooth/src/: main.rs
esp32-wifi-project/: Cargo.toml  MATRIX_API.md  MAX7219_8x8_MATRIX.md  README.md  test_matrix_api.sh
esp32-wifi-project/.cargo/: config.toml
esp32-wifi-project/src/: main.rs  main.rs.backup
esp32-wifi-project/src/matrix/: api.rs
esp32-wifi-ultrasonic/: .gitignore  API_IMPROVEMENTS_SUMMARY.md  Cargo.toml  LCD_DISPLAY.md  PROJECT_SUMMARY.md  README.md  ULTRASONIC_TM1637_SETUP.md  sdkconfig.defaults
esp32-wifi-ultrasonic/src/: config.rs  main.rs
esp32-wifi-ultrasonic/src/matrix/: mod.rs
esp32-wifi-ultrasonic/src/ultrasonic/: mod.rs
esp32/src/: helloworld.rs  main.rs
esp32sudhir/: Cargo.toml  README.md
esp32sudhir/docs/: TM1637_DISPLAY.md
esp32sudhir/src/: display.rs  main.rs  web.rs  wifi.rs
learn-docker/: readme.md
learn-rust/: main.rs  readme.md
rust-programming-trainer/: README.md  RUST System Programming-Trainer.docx
src/: main.rs
video-editor-rs/: README.md  package-lock.json  package.json  sign-apk.sh
video-editor-rs/src/: App.tsx
video-editor-rs/src-tauri/: Cargo.toml  tauri.conf.json
video-editor-rs/src-tauri/capabilities/: default.json
video-editor-rs/src-tauri/src/: lib.rs  main.rs
