[package]
name = "esp32-bluetooth-project"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
resolver = "2"

[[bin]]
name = "esp32-bluetooth-project"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
ble = []

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45"
embedded-svc = "0.28"
esp32-nimble = "0.11"

[build-dependencies]
embuild = "0.33"