[package]
name = "video-editor-rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "video_editor_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-fs = "2.4.4"
chrono = { version = "0.4", features = ["serde"] }

# FFmpeg is only compiled for desktop platforms
[target.'cfg(not(target_os = "android"))'.dependencies]
ffmpeg-next = { version = "8.0.0", features = ["build"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
